<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".EyeSetFragment"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:layout_marginBottom="20dp">
    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/eye_streching_start">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <FrameLayout
                android:layout_marginTop="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <View
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="200dp"
                    android:background="@drawable/radius"/>
                <TextView
                    android:layout_width="361dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textSize="20sp"
                    android:text="@string/eye_warning" />
            </FrameLayout>

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_marginTop="50dp"
                android:layout_marginLeft="123dp"
                android:theme="@style/text1"
                android:text="@string/set_eyewarn"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <EditText
                    android:id="@+id/setMessage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:layout_marginLeft="100dp"
                    android:hint="@string/eyes_message"/>
                <Button
                    android:id="@+id/setMessageButton"
                    android:layout_marginLeft="10dp"
                    android:background="@drawable/button_background"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:text="@string/set_mes_btn"/>
            </LinearLayout>

            <TextView
                android:theme="@style/text1"
                android:layout_marginTop="30dp"
                android:layout_marginLeft="123dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/set_alarm_time" />

            <NumberPicker
                android:id="@+id/npker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/NumberPickerTheme" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/button_background"
                android:text="@string/set_mes_btn"
                android:textColor="@color/black" />
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/eye_streching_start"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:textColor="@color/black"
        android:text="@string/eye_str_start"
        android:background="@drawable/button_background"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollView"
        app:layout_constraintBottom_toBottomOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>